feat: new information drawer

--- a/src/main/webapp/src/assets/main.scss
+++ b/src/main/webapp/src/assets/main.scss
@@ -16,5 +16,6 @@
 
 @use 'vuetify/styles' with (
   $color-pack: false,
-  $utilities: false
+  $utilities: false,
+  $navigation-drawer-border-style: none
 );
