--- a/src/main/webapp/src/assets/main.scss
+++ b/src/main/webapp/src/assets/main.scss
@@ -19,3 +19,9 @@
   $utilities: false,
   $navigation-drawer-border-style: none
 );
+
+.app-container {
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+}
