feat: default file icon + drawer file info

--- a/src/main/webapp/src/assets/main.scss
+++ b/src/main/webapp/src/assets/main.scss
@@ -24,3 +24,9 @@
   height: 100vh !important;
   overflow: hidden;
 }
+
+.text-truncated {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
