build(deps-dev): bump eslint from 8.57.0 to 9.12.0

--- a/src/main/webapp/src/assets/main.scss
+++ b/src/main/webapp/src/assets/main.scss
@@ -16,7 +16,7 @@
 
 @use 'vuetify/settings' with (
   $color-pack: false,
-  $utilities: false,
+  $utilities: false
 );
 
 .app-container {
@@ -31,5 +31,5 @@
 }
 
 .text-preserve-breaks {
-  white-space: preserve-breaks
+  white-space: preserve-breaks;
 }
